fix: button align

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -3,6 +3,7 @@
   max-width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   padding-bottom: 10px;
   gap: 10px;
   -webkit-box-shadow: 0px 0px 10px -2px rgba(0, 0, 0, 0.3);
